Assets/Plugins/iOS/arsdk.framework/Headers/ImageManager.h

    /**
     * @brief 获取@trackable对应虚拟Mark的大小
     * @param trackable Trackable指针
     * @param width     输出, 虚拟模型宽
     * @param height    输出, 虚拟模型高
     * @return 0: 成功, 其他: 失败
     * @note 此函数必须在addTrackable及至少两次IR_Memory完成之后调用
	 * @note 虚拟模型定义：(-width / 2, -height / 2, -75.0f)
	 *                    (-width / 2,  height / 2, -75.0f)
	 *                    ( width / 2, -height / 2, -75.0f)
	 *                    ( width / 2,  height / 2, -75.0f)
     */
    ARSDK_API int getTrackVirtualMarkSize(void* trackable, float* width, float* height);