Assets/AlvaAR/arsdk/AlvaARNativeWrapper.cs


        /**
         * @brief 获取名为@nameOfModel的Model
         * @param nameOfModel 要查询的model的名字, 以'\0'结尾
         * @return NULL: 未找到对应名字的model
         *         其他: ptr of Model
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern IntPtr getModelByName(string nameOfModel);

        /**
         * @brief 获取序号为@index的Model
         * @param index 要查询的model的序号
         * @return NULL: 未找到对应名字的model
         *         其他: ptr of Model
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern IntPtr getModelByIndex(int index);

        /**
         * @brief 释放模板管理器环境
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int unitModelManager();

        /**
         * @brief 获取@model的序号
         * @param model Model指针
         *              由@getModelByIndex或@getModelByName得到
         * @return >=0 @model的序号
         *          <0 @model为空指针
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getModelIndex(IntPtr model);

        /**
         * @brief 获取@model的名称
         * @param model    Model指针
         *                 由@getModelByIndex或@getModelByName得到
         * @param name     大小为@nameSize的输出缓存空间, model的名字
         *                 内存由调用者管理
         * @param nameSize name的空间大小, 单位: byte
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getModelName(IntPtr model, IntPtr name, int nameSize);

        /**
         * @brief 获取@model的状态
         * @param model Model指针
         *              由@getModelByIndex或@getModelByName得到
         * @return @model的状态
         *          0: @model未激活
         *          1: @model已激活
         *       其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getModelStatus(IntPtr model);

        /**
         * @brief 设置@model的状态
         * @param model  Model指针
         *               由@getModelByIndex或@getModelByName得到
         * @param status 目标状态. 0: 未激活, 1: 激活
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int setModelStatus(IntPtr model, int status);

        /**
         * @brief 查询@model的姿态@rts
         * @param model Model指针
         * @param rts   输出, @model的姿态
         *              格式:
         *                  q1 q2 q3 q4 t1 t2 t3 s1 s2 s3
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getModelRTS(IntPtr model, float[] rts);

        /**
 * @brief 查询@model的姿态矩阵@matrix
 * @param model  Model指针
 * @param matrix 输出, @model的姿态矩阵
 *               格式:
 *slamView           m11 m12 m13 m14
 *                   m21 m22 m23 m24
 *                   m31 m32 m33 m34
 *                   m41 m42 m43 m44
 *
 *slamModel          m11 m12 m13 m14
 *                   m21 m22 m23 m24
 *                   m31 m32 m33 m34
 *                   m41 m42 m43 m44
 *
 *cadView            m11 m12 m13 m14
 *                   m21 m22 m23 m24
 *                   m31 m32 m33 m34
 *                   m41 m42 m43 m44
 *
 *cadPredict         m11 m12 m13 m14
 *                   m21 m22 m23 m24
 *                   m31 m32 m33 m34
 *                   m41 m42 m43 m44
 *modelCenter        x,y
 * @return 0: 成功, 其他: 失败
 */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getModelPoseMatrix(IntPtr model, float[] matrix);

        /**
         * @brief 查询@model是否被识别到
         * @param model Model指针
         * @return 0: 未被识别到
         *         1: 被识别到
         *      其他: 查询失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int isModelFound(IntPtr model);

        /**
         * @brief 清除Model的查找结果, 所有Model都重置为未找到状态
         *
         * @note此函数只有在明确需要重置之前查找结果的情况下使用
         * 例如
         *      在有查找结果后，明确在一段时间未进行输入图像查找，
         *      又在未重新初始化的情况，需要重新输入图像进行查找，
         *      此时在重新输入图像前需要调用此函数清理查找结果
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern void resetModelResult();

        /**
         * @brief 图像匹配完成回调接口
         * @param foundIndex 匹配到的序号
         *                   -1: 未匹配到
         *                   其他: 匹配到的模型序号
         * @param frameIndex 帧序号, 目前未实现, 请勿使用
         */
        public delegate void OnMTSearchDone(int foundIndex, int frameIndex);

        /**
         * @brief 设置搜索结果回调函数, 仅在ImageSearch下可用
         * @param pOnMTSearchDone 回调函数指针
         *                        如果传NULL,则清除之前回调函数设置
         *                        在程序结束前必须清空此接口
         * @note 此接口中不要加重负载计算
        
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern void setOnMTSearchDone(OnMTSearchDone pOnMTSearchDone);
         */

        /**
         * @brief 获取必要的日志
         * @param dataBuff 输出空间1024
         
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern void getLogBuffData(string dataBuff);
        */


        /**
     * @brief 计算投影矩阵
     * @param wid                视图宽
     * @param hei                视图高
     * @param viewMatrix_LMO     输入，视角矩阵，16 * sizeof(float)大小空间, 行主序
     * @param projectMatrix_CMO  输出，投影矩阵，16 * sizeof(float)大小空间, 列主序
     * @return 0: 成功, 其他: 失败
     */

#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int computeProjectMatrix(int wid, int hei, float[] viewMatrix, float[] projectMatrix);



        /**
     * @brief 计算固定裁剪范围的投影矩阵
     * @param wid                视图宽
     * @param hei                视图高
     * @param nearV              近裁剪面
     * @param farV               远裁剪面
     * @param projectMatrix_CMO  输出，投影矩阵，16 * sizeof(float)大小空间, 列主序
     * @return 0: 成功, 其他: 失败
     *
     * @note 如果@wid > @hei, 认为显示为横屏
     * @note 如果@wid < @hei, 认为显示为竖屏
     */

#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int computeProjectMatrixFixRange(int wid, int hei, float nearV, float farV, float[] projectMatrix_CMO);

        /*
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern void JniInit();
        */


        /**
     * @brief 获取模型初始位姿下的透明图RGBA格式，宽800 高480
     *        在函数addModel之后调用
     * @param model   Model指针
     * @param picData 输出buff 由调用者管理空间（宽*高*4）
     * @return 0: 成功, 其他: 失败
     */

#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getModelGuideImage(IntPtr model, IntPtr picData);

        /**
     * @brief 查询@model的锚点模型位姿
     *        锚点只允许添加一个
     *        在锚点失效情况下，如果可添加锚点，则需删除锚点，重新添加
     * @param model          Model指针
     * @param anchorQT       输出, @model的锚点模型位姿
     *                       格式: q1 q2 q3 q4 t1 t2 t3
     * @isDelete             输出，int值，不等于0时，删除锚点，重新添加锚点
     *
     * @return 0: 成功,可添加锚点  其他: 失败
     */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getAnchorModelQT(IntPtr model, float[] anchorQT, int[] isDelete);


        #endregion MT interface---------

        #endregion external interface..........

        /**
    * yuv数据的缩放操作
    *
    * @param i420Src   i420原始数据
    * @param width     原始宽度
    * @param height    原始高度
    * @param i420Dst   i420目标数据
    * @param dstWidth  目标宽度
    * @param dstHeight 目标高度
    * @param mode      压缩模式 ，0~3，质量由低到高，一般传入0
    
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("yuvutil")]
#endif
        private static extern void scaleI420(byte[] i420Src, int width, int height, byte[] i420Dst, int dstWidth, int dstHeight, int mode);
        */

        /**
     * yuv数据的旋转操作
     *
     * @param i420Src i420原始数据
     * @param width
     * @param height
     * @param i420Dst i420目标数据
     * @param degree  旋转角度
     
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("yuvutil")]
#endif
        private static extern void rotateI420(byte[] i420Src, int width, int height, byte[] i420Dst, int degree);
        */

        /*
    * @brief 获取@trackable对应虚拟Mark的大小
    * @param trackable Trackable指针
    * @param width     输出, 虚拟模型宽
    * @param height    输出, 虚拟模型高
    * @return 0: 成功, 其他: 失败
    * @note 此函数必须在addTrackable之后调用
    */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getTrackVirtualMarkSize(IntPtr trackable, float[] width, float[] height);
    }



}
